--- a/SealAndOrca.csproj
+++ b/SealAndOrca.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\OrcaMovement.cs" />
     <Compile Include="Assets\Scripts\ForceGenerator.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Seal.cs" />
