--- a/SealAndOrca.csproj
+++ b/SealAndOrca.csproj
@@ -75,9 +75,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\OrcaMovement.cs" />
     <Compile Include="Assets\Scripts\ForceGenerator.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
+    <Compile Include="Assets\Scripts\OrcaMovement.cs" />
     <Compile Include="Assets\Scripts\Seal.cs" />
     <Compile Include="Assets\Scripts\Timer.cs" />
     <Compile Include="Assets\Scripts\WaveGenerator.cs" />
