--- a/SealAndOrca.csproj
+++ b/SealAndOrca.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Scripts\OrcaMovement.cs" />
     <Compile Include="Assets\Scripts\Seal.cs" />
     <Compile Include="Assets\Scripts\Timer.cs" />
+    <Compile Include="Assets\Scripts\WaterWaveScript.cs" />
     <Compile Include="Assets\Scripts\WaveGenerator.cs" />
     <Compile Include="Assets\Scripts\WaveScript.cs" />
   </ItemGroup>
